Generating HTML for Paper Links Along with Paper content

--- a/csit/4sem/database/2073.html
+++ b/csit/4sem/database/2073.html
@@ -138,8 +138,8 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Fourth Semester</h4>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow js-current-sem-paper" id="paper-fourth-sem">
+                <h4 class="js-semester-name">Fourth Semester</h4>
                 <ol>
                     <li><a href="../sad/2079.html">System Analysis and Design</a></li>
                     <li><a href="../nm/2079.html">Numerical Methods</a></li>
@@ -202,5 +202,4 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
