--- a/index.html
+++ b/index.html
@@ -73,46 +73,26 @@
 
   <!-- Slider Section -->
 
-  <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/slide1.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <!-- <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p> -->
-        </div>
+        <img src="images/slide1.png" class="d-block w-100" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="images/slide2.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <!-- <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p> -->
-        </div>
+        <img src="images/slide2.png" class="d-block w-100" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src="images/slide2.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <!-- <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p> -->
-        </div>
+        <img src="images/slide1.png" class="d-block w-100" alt="Slide 3">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="sr-only"></span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+      <span class="sr-only"></span>
+    </a>
   </div>
 
 
@@ -129,7 +109,101 @@
 
     <!-- Science and Technology Departments -->
     <div class="js-semWiseSubjects">
-      
+      <!-- 
+      <div class="row justify-content-center" id="csit-sem-sub">
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>First Semester</h4>
+          <ol>
+            <li><a href="#">Compulsory English </a></li>
+            <li><a href="#">Information Technology Fundamentals</a></li>
+            <li><a href="#">Calculus And Analytical Geometry</a></li>
+            <li><a href="#">Electronic Physics</a></li>
+            <li><a href="#">Programming Fundamentals And C Programming</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>Second Semester</h4>
+          <ol>
+            <li><a href="csit/2sem/la/2071.html">Linear Algebra</a></li>
+            <li><a href="csit/2sem/mc/2071.html">Mechanics And Electrodynamics</a></li>
+            <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
+            <li><a href="csit/2sem/mp/2072.html">Microprocessor System</a></li>
+            <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
+          <h4>Third Semester</h4>
+          <ol>
+            <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
+            <li><a href="csit/3sem/ds/2078.html">Discrete Structure</a></li>
+            <li><a href="csit/3sem/management/2078.html">Introduction To Management</a></li>
+            <li><a href="csit/3sem/c++/2078.html">Object Oriented Programming with C++</a></li>
+            <li><a href="csit/3sem/os/2078.html">Operating System</a></li>
+            <li><a href="csit/3sem/statI/2078.html">Statistics and Probability</a></li>
+          </ol>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" id="csit-sem-sub">
+        <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
+          <h4>Fourth Semester</h4>
+          <ol>
+            <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
+            <li><a href="csit/4sem/nm/2079.html">Numerical Methods</a></li>
+            <li><a href="csit/4sem/database/2073.html">Database Management System</a></li>
+            <li><a href="csit/4sem/satII/2079.html">Applied Statistics</a></li>
+            <li><a href="csit/4sem/dcn/2079.html">Data Communication and Networks</a></li>
+            <li><a href="csit/4sem/toc/2079.html">Theory Of Computation</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>Fifth Semester</h4>
+          <ol>
+            <li><a href="csit/5sem/cg/2079.html">Computer Graphics</a></li>
+            <li><a href="csit/5sem/daa/2075.html">Data Analysis and Algorithms</a></li>
+            <li><a href="csit/5sem/cd/2079.html">Compiler Design</a></li>
+            <li><a href="csit/5sem/sam/2079.html">Simulation and Modeling</a></li>
+            <li><a href="csit/5sem/ai/2079.html">Artificial Intelligence</a></li>
+            <li><a href="csit/5sem/web/2079.html">Web Technology I</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>Sixth Semester</h4>
+          <ol>
+            <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
+            <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
+            <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
+            <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
+            <li><a href="csit/6sem/webII/2074.html">Web Tech II</a></li>
+            <li><a href="https://fwunotes.xyz/index.html">Minor Project I</a></li>
+          </ol>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" id="csit-sem-sub">
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>Seventh Semester</h4>
+          <ol>
+            <li><a href="csit/7sem/ecom/2075.html">E-commerce</a></li>
+            <li><a href="csit/7sem/adJava/2075.html">Advanced Java Programming</a></li>
+            <li><a href="csit/7sem/ooad/2075.html">Object Oriented Analysis and Design</a></li>
+            <li><a href="#">Minor Project II</a></li>
+            <li><a href="csit/7sem/dba/2074.html">Database Administration (Elective I)</a></li>
+            <li><a href="csit/7sem/dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
+          <h4>Eight Semester</h4>
+          <ol>
+            <li><a href="csit/8sem/pc/2074.html">Parallel Computing</a></li>
+            <li><a href="#">Internship</a></li>
+            <li><a href="csit/8sem/adbd/2074.html">Advanced Database Design (Elective III)</a></li>
+            <li><a href="csit/8sem/ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
+            <li><a href="csit/8sem/ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
+          </ol>
+        </div>
+      </div>
+       -->
     </div>
 
     <!-- FAQ Section -->
@@ -299,7 +373,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-  <script src="scipts/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script type="module" src="scipts/index.js"></script>
 </body>
 
 </html>
