--- a/csit/2sem/DL/2071.html
+++ b/csit/2sem/DL/2071.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                    width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -98,86 +99,84 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                         <li>What are the features of digital system? Subtract 1001110001 from 1000110010 by using 2's complement. (4+4)</li>
-                         <li>State and prove DE Morgan's first and second law.</li>
-                         <li>What is universal gate? Show NOR gate as universal gate. (2+6)</li>
-                         <li>Explain NAND implementation of logic circuit.</li>
-                         <li>What is counter? Explain ripple counter.</li>
-                         <li>Differentiate between synchronous and asynchronous sequential circuit with example.</li>
-                         <li>What is full address? Explain it.</li>
-                         <li>Defie multiplexer. Draw circuit diagram of multiplexer.</li>
+                        <li>What are the features of digital system? Subtract 1001110001 from 1000110010 by using 2's
+                            complement. (4+4)</li>
+                        <li>State and prove DE Morgan's first and second law.</li>
+                        <li>What is universal gate? Show NOR gate as universal gate. (2+6)</li>
+                        <li>Explain NAND implementation of logic circuit.</li>
+                        <li>What is counter? Explain ripple counter.</li>
+                        <li>Differentiate between synchronous and asynchronous sequential circuit with example.</li>
+                        <li>What is full address? Explain it.</li>
+                        <li>Defie multiplexer. Draw circuit diagram of multiplexer.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
                         <li>What is flip-flop? Explain SR, JK maser-slave flip-flop. (2+4+6)</li>
-                        <li>What is decoder? Describe it with blick diagram. Construct a 5-line to 32-line decoder with 3-line to 8-line decoder and 2-line to 4-line decoder.</li>
-                        <li>Define POS and SOP term. Simplify and draw the logic diagram for the following Boolean expression: F(A, B, C, D) = Σ(0,2,4,5,8,14,15) and d(A,B,C,D) = Σ(7,10,13). (3+13)</li>
+                        <li>What is decoder? Describe it with blick diagram. Construct a 5-line to 32-line decoder with
+                            3-line to 8-line decoder and 2-line to 4-line decoder.</li>
+                        <li>Define POS and SOP term. Simplify and draw the logic diagram for the following Boolean
+                            expression: F(A, B, C, D) = Σ(0,2,4,5,8,14,15) and d(A,B,C,D) = Σ(7,10,13). (3+13)</li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Second Semester</h4>
-                <ol>
-                  <li><a href="../la/2071.html">Linear Algebra</a></li>
-                  <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
-                  <li><a href="#">Digital Logic Design</a></li>
-                  <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
-                </ol>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow js-current-sem-paper" id="paper-fourth-sem">
+                <h4 class="js-semester-name">Second Semester</h4>
+
             </div>
         </div>
     </div>
 
 
 
-   <!-- Footer Section -->
-   <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="../../../csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="../../../bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
         </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="../../../csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="../../../bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
 
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        </div>
     </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script type="module" src="../../../scipts/paper.js"></script>
 </body>
 
 </html>
