--- a/csit/2sem/la/2071.html
+++ b/csit/2sem/la/2071.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                    width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -97,25 +98,34 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Discuss the system of linear equations. Prove that the system of linear equation x + y = 5, x - y = 1, is consistent.</li>
+                        <li>Discuss the system of linear equations. Prove that the system of linear equation x + y = 5,
+                            x - y = 1, is consistent.</li>
                         <li>Find the inverse of matrix <img src="../../../images/la2.png" alt="" class="img-fluid"></li>
-                        <li>Find the eigen value of matrix <img src="../../../images/la3.png" alt="" class="img-fluid"></li>
-                        <li>For any two vector P, Q in <img src="../../../images/la4.png" alt="" class="img-fluid">, then <br>
+                        <li>Find the eigen value of matrix <img src="../../../images/la3.png" alt="" class="img-fluid">
+                        </li>
+                        <li>For any two vector P, Q in <img src="../../../images/la4.png" alt="" class="img-fluid">,
+                            then <br>
                             a) P + Q = Q + P <br>
                             b) P.Q = Q.P <br>
                         </li>
-                        <li>Prove that, If P and Q be two vectors in <img src="../../../images/la4.png" alt="" class="img-fluid">, then
+                        <li>Prove that, If P and Q be two vectors in <img src="../../../images/la4.png" alt=""
+                                class="img-fluid">, then
                             <br> <img src="../../../images/la5.png" alt="" class="img-fluid">
                         </li>
-                        <li>Prove that the product of a scalar and a linear transformation is also a linear transformation.</li>
-                        <li>Find the orthogonal basis for  <img src="../../../images/la7.png" alt="" class="img-fluid"></li>
-                        <li>What are the eigen values and eigen vectors of a matrix? Define characteristic equation with example.</li>
+                        <li>Prove that the product of a scalar and a linear transformation is also a linear
+                            transformation.</li>
+                        <li>Find the orthogonal basis for <img src="../../../images/la7.png" alt="" class="img-fluid">
+                        </li>
+                        <li>What are the eigen values and eigen vectors of a matrix? Define characteristic equation with
+                            example.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>State and prove Cayley Hamilton Theorem and verify it for a square matrix of order 2 and 3.</li>
-                        <li>If P and Q be two vectors in <img src="../../../images/la10a.png" alt="" class="img-fluid">, then prove that 
+                        <li>State and prove Cayley Hamilton Theorem and verify it for a square matrix of order 2 and 3.
+                        </li>
+                        <li>If P and Q be two vectors in <img src="../../../images/la10a.png" alt="" class="img-fluid">,
+                            then prove that
                             <img src="../../../images/la10b.png" alt="" class="img-fluid">
                         </li>
                         <li>Prove that, <br>
@@ -125,68 +135,62 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Second Semester</h4>
-                <ol>
-                  <li><a href="#">Linear Algebra</a></li>
-                  <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
-                  <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                  <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
-                </ol>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow js-current-sem-paper" id="paper-fourth-sem">
+                <h4 class="js-semester-name">Second Semester</h4>
+               
             </div>
         </div>
     </div>
 
 
 
-   <!-- Footer Section -->
-   <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="../../../csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="../../../bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
         </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="../../../csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="../../../bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
 
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        </div>
     </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script type="module" src="../../../scipts/paper.js"></script>
 </body>
-
 </html>
