--- a/csit/2sem/mc/2071.html
+++ b/csit/2sem/mc/2071.html
@@ -116,15 +116,9 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Second Semester</h4>
-                <ol>
-                    <li><a href="../la/2071.html">Linear Algebra</a></li>
-                    <li><a href="#">Mechanics And Electrodynamics</a></li>
-                    <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                    <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                    <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
-                </ol>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow js-current-sem-paper" id="paper-fourth-sem">
+                <h4 class="js-semester-name">Second Semester</h4>
+               
             </div>
         </div>
     </div>
@@ -178,6 +172,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+        <script type="module" src="../../../scipts/paper.js"></script>
 </body>
-
 </html>
