--- a/csit/2sem/mp/2072.html
+++ b/csit/2sem/mp/2072.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                    width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -97,94 +98,101 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>WAP in 8085 microprocessor to separate odd & even numbers from an array of 10 numbers stored in memory locations starting from 2050H. Store the odd numbers starting from 2060H & even number starting from 2070H onwards.</li>
-                        <li>Three 8 bit numbers P, Q and R are stored in the registers B, C and D respectively. WAP in 8085 microprocessor to find the largest number among them and store it in the H register.</li>
-                        <li>A set of numbers is stored in memory locations starting from xx25H. The last number is 45H. WAP in 8085 to find if a hex number AB exist in them. Also count total appearance of it if it exist.</li>
+                        <li>WAP in 8085 microprocessor to separate odd & even numbers from an array of 10 numbers stored
+                            in memory locations starting from 2050H. Store the odd numbers starting from 2060H & even
+                            number starting from 2070H onwards.</li>
+                        <li>Three 8 bit numbers P, Q and R are stored in the registers B, C and D respectively. WAP in
+                            8085 microprocessor to find the largest number among them and store it in the H register.
+                        </li>
+                        <li>A set of numbers is stored in memory locations starting from xx25H. The last number is 45H.
+                            WAP in 8085 to find if a hex number AB exist in them. Also count total appearance of it if
+                            it exist.</li>
                         <li>Draw the block SAP-1 architecture and explain each block.</li>
                         <li>Draw the timing diagram of MVI A, 98H. Also explain it.</li>
                         <li>What do you mean by hyper threading? Differentiate between RISC and CISC architecture.</li>
-                        <li>What is the signigicance of flag register in any microprocessor? Explain the flags of 8085 microprocessor.</li>
-                        <li>What do you mean by interrupts? Explain maskable and non-maskable interrupt with example.</li>
+                        <li>What is the signigicance of flag register in any microprocessor? Explain the flags of 8085
+                            microprocessor.</li>
+                        <li>What do you mean by interrupts? Explain maskable and non-maskable interrupt with example.
+                        </li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>a. Draw the architecture of basic microprocessor and explain each components of it in details. (10) <br>
-                            b. Explain DMA with its advantages and applications. (6) 
+                        <li>a. Draw the architecture of basic microprocessor and explain each components of it in
+                            details. (10) <br>
+                            b. Explain DMA with its advantages and applications. (6)
                         </li>
-                        <li>a. WAP to print the string "Microprocessor is good for programming" in 8086 microprocessor. (10) <br>
-                            b. What do you understand by addressing modes? Explain implied addressing mode with example. (6)
+                        <li>a. WAP to print the string "Microprocessor is good for programming" in 8086 microprocessor.
+                            (10) <br>
+                            b. What do you understand by addressing modes? Explain implied addressing mode with example.
+                            (6)
                         </li>
-                        <li>a. Draw the block diagram of RS-232C and explain with the example of null modem connection. (10)
+                        <li>a. Draw the block diagram of RS-232C and explain with the example of null modem connection.
+                            (10)
                             <br>
-                            b. WAP in 8085 microprocessor that loads any sixteen data into memory location starting from XX70H. Transfer  the entire block of data starting from XX40H in reverse order. (6)
+                            b. WAP in 8085 microprocessor that loads any sixteen data into memory location starting from
+                            XX70H. Transfer the entire block of data starting from XX40H in reverse order. (6)
                         </li>
 
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Second Semester</h4>
-                <ol>
-                  <li><a href="../la/2071.html">Linear Algebra</a></li>
-                  <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
-                  <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                  <li><a href="#">Microprocessor System</a></li>
-                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
-                </ol>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow js-current-sem-paper" id="paper-fourth-sem">
+                <h4 class="js-semester-name">Second Semester</h4>
             </div>
         </div>
     </div>
 
 
 
-   <!-- Footer Section -->
-   <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="../../../csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="../../../bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
         </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="../../../csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="../../../bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
 
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        </div>
     </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script type="module" src="../../../scipts/paper.js"></script>
 </body>
 
 </html>
