Generating HEADER and FOOTER And Adding new files

--- a/csit/6sem/crypto/2080.html
+++ b/csit/6sem/crypto/2080.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Techonology II (CSIT.325)</title>
+    <title>Introduction to Cryptography (CSIT.321)</title>
 
     <!-- BootStrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,67 +69,91 @@
         <div class="row justify-content-center">
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
-                <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
+                <div class="col-lg-8">
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
                     <a href="2079.html"><button type="button" class="btn">2079</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2080</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Web Techonology II (CSIT.325)</p>
+                <p>End-Term Examination-2080</p>
+                <p> Introduction to Cryptography (CSIT.321)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> sixth <br>
+                        <b>Semester:</b> Sixth <br>
                     </div>
-                    <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 80 <br>
-                        <b>Time:</b> 2hrs 40 minutes
+                    <div class="col-md-3 text-end">
+                        <b>Full Marks:</b> 100 <br>
+                        <b>Time:</b> 3hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group B</h5>
+                <h5>Group A</h5>
                 <b>
-                    <p>Attempt any six questions.(6x8=48)</p>
+                    <p>Attempt all questions.(8x3=24)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>explain the architecture of web with pictorial representation.</li>
-                        <li>Write short notes of filter input, XSS, cookie.</li>
-                        <li>explain switch statement in PHP with example.</li>
-                        <li>Explain file inclusion methods with their difference.</li>
-                        <li>Write short notes on web CMS and write down the features of wordpress.</li>
-                        <li>What is class, objects constructor and destructor in PHP, explain with code example.</li>
-                        <li>what are the different types of loop used in PHP?</li>
-                        <li>Write short notes on function, function arguments/ parameters with example.</li>
+                        <li>What is the difference between virus, worm and Trojan horses?</li>
+                        <li>LIst the various types of active and passive attack.</li>
+                        <li>Compare and contrast a conventional signature and a digital signature.</li>
+                        <li>Choose and briefly describe one major applicatoin of elliptic curve group operations in cryptography.</li>
+                        <li>Do we need padding if the length of the original message is already is multiple of 1024 bits in SHA-512></li>
+                        <li>What is the draw backback of Double DES algorithm? How is it overcome by Triple DES?</li>
+                        <LI>Define secure socket layer.</LI>
+                        <li>Explain affine cipher with example.</li>
+
+                        <h5 class="text-center">Group B</h5>
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>Explain DES function in detail.</li>
+                        <li>List the main features of SHA-512 cryptographic hash function. What kind of compression function is used in SHA-512.</li>
+                        <li>Encrypt "This is the final exam" with playfair cipher using key "Guidance". Explain steps involved.</li>
+                        <li>Show how kerberos protocol can be used to achieve single sing-on in distributed systems.</li>
+                        <li>Explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
+                        <li>Write short notes on: (any two)
+                            <ol type="a">
+                                <li>PGP protocol</li>
+                                <li>Types of firewalls.</li>
+                                <li>IDS</li>
+                            </ol>
+                        </li>
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
-                        <li>Write difference between GET and POST method, write a program in PHP to collect data from a
-                            form with the fields Full Name, Roll No, Address, Batch and print the data.</li>
-                        <li>explain different types of array in PHP with xamples and write short note on session and
-                            interface in PHP.</li>
-                        <li>Explain different types of join with examples and pictorial representation.</li>
+                        <li>Write down the features of AES. Explain the procedure of mix=column transformation in AES with an example.</li>
+                        <li>What is transformation techniques? Explain rail fence and rwo transformation techniques with suitable example.</li>
+                        <li>How can you check integrity of a message? Explain about cipher block chaining message authentication code.</li>
+                        <li>Write short notes on:(any two)
+                            <ol>
+                                <li>Email security.</li>
+                                <li>Diffie Hellman Algorithm.</li>
+                                <li>EL-Gamal Algorithm.</li>
+                            </ol>
+                        </li>
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
+                    <li><a href="#">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="#" href="">Web Tech II</a></li>
-                    <li><a href="#" href="">Minor Project I</a></li>
+                    <li><a href="../webII/2074.html">Web Tech II</a></li>
+                    <li><a href="#">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
