--- a/csit/6sem/java/2074.html
+++ b/csit/6sem/java/2074.html
@@ -74,6 +74,7 @@
                     <a href="2075.html"><button type="button" class="btn ">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2080.html"><button type="button" class="btn">2080</button></a>
                 </div>
             </div>
 
@@ -130,7 +131,7 @@
             <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
+                    <li><a href="../crypto/2074.html">Introduction to Cryptography</a></li>
                     <li><a href="#">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
