--- a/csit/6sem/java/2075.html
+++ b/csit/6sem/java/2075.html
@@ -74,6 +74,7 @@
                     <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2080.html"><button type="button" class="btn">2080</button></a>
                 </div>
             </div>
 
