--- a/csit/6sem/webII/2075.html
+++ b/csit/6sem/webII/2075.html
@@ -73,6 +73,7 @@
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
