--- a/csit/6sem/webII/2076.html
+++ b/csit/6sem/webII/2076.html
@@ -21,46 +21,8 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar  navbar-expand-lg bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active  text-white" aria-current="page" href="../../../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#about-us">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Departments
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="#bsccsit">Science & Technology</a></li>
-                            <li><a class="dropdown-item" href="#">Engineering</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Management</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact Us</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
+    <nav class="navbar  navbar-expand-lg bg-primary js-header-container">
+        
     </nav>
 
     <!-- Paper Design Model -->
@@ -73,6 +35,7 @@
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="#"><button type="button" class="btn paper-year-style">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
@@ -168,8 +131,8 @@
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="#" href="">Web Tech II</a></li>
-                    <li><a href="#" href="">Minor Project I</a></li>
+                    <li><a href="#" >Web Tech II</a></li>
+                    <li><a href="#" >Minor Project I</a></li>
                 </ol>
             </div>
         </div>
@@ -179,53 +142,16 @@
 
 
     <!-- Footer Section -->
-    <div class="container-fluid">
-        <div class="row justify-content-center rounded" id="footer-section">
-            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-            <div class="col-md-5 text-center">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""> <i class="bi bi-instagram"></i></i></a>
-                <a href=""><i class="bi bi-github"></i></i></a>
-                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-                <a href=""> <i class="bi bi-instagram"></i></i></a>
-            </div>
-        </div>
-
-        <div class="row justify-content-center" id="footer-section-2">
-            <div class="col-lg-3 mb-3">
-                <h4>FWUNOTES</h4>
-                <hr class="mb-4">
-                Here we provide the old question paper of different faculties of Far Western University.
-                Along this we also provide the notes of different subject.
-            </div>
-            <div class="col-lg-2 mb-3" id="footer-useful-link">
-                <h4>USEFUL LINKS</h4>
-                <hr class="lg-4">
-                <a href="../../../csit.html">CSIT</a> <br>
-                <a href="#">General Bsc</a> <br>
-                <a href="#">Engineering</a> <br>
-                <a href="../../../bba.html">BBA</a> <br>
-                <a href="#">BBS</a> <br>
-            </div>
-            <div class="col-lg-3 mb-3" id="footer-contact">
-                <h4>CONTACT</h4>
-                <hr class="mb-4">
-                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-            </div>
-        </div>
-
-        <div class="row text-center" id="footer-copyright-section">
-            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
-        </div>
+    <div class="container-fluid js-footer-container">
+        
     </div>
 
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="../../../scipts/header.js"></script>
+    <script src="../../../scipts/footer.js"></script>
 </body>
 
 </html>
