Add Content of SE and Web II 2080

--- a/csit/6sem/se/2080.html
+++ b/csit/6sem/se/2080.html
@@ -1,8 +1,4 @@
-<!doctype html>
-
-<html lang="en">
-
-
+<html>
 
 <head>
 
@@ -10,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Java programming (CSIT.322)</title>
+    <title>Software Engineering (CSIT.324)</title>
 
 
 
@@ -42,10 +38,11 @@
 
 
     <!-- Navbar -->
-
     <nav class="navbar  navbar-expand-lg bg-primary js-header-container">
 
     </nav>
+
+
 
 
     <!-- Paper Design Model -->
@@ -64,13 +61,12 @@
 
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
 
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2075.html"><button type="button" class="btn ">2075</button></a>
 
-                    <a href="2075.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
 
                     <a href="2079.html"><button type="button" class="btn">2079</button></a>
-
-                    <a href="#"><button type="button" class="btn  paper-year-style">2080</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style ">2080</button></a>
 
                 </div>
 
@@ -84,7 +80,7 @@
 
                 <p>End-Term Examination-2080</p>
 
-                <p> Java programming (CSIT.322)</p>
+                <p> Software Engineering (CSIT.324)</p>
 
                 <div class="row justify-content-between">
 
@@ -116,7 +112,7 @@
 
                 <b>
 
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt all questions. (Very Short Questions)(8 x 3 = 24)</p>
 
                 </b>
 
@@ -124,76 +120,43 @@
 
                     <ol>
 
-                        <li>What is wrapper class?</li>
-
-                        <li>Why is JVM called virtual machine?</li>
-
-                        <li>What are the uses of extends and implements keywords in java?</li>
-
-                        <li>How does final ciffers from finally?</li>
-
-                        <li>What is method overriding?</li>
-
-                        <li>Define garbage collector.</li>
-
-                        <li>How do you declare arrays in java?</li>
-
-                        <li>How priorities can be assigned to threads?</li>
-
+                        <li>Discuss about feasibility study.</li>
+                        <li>What do you mean by software scope?</li>
+                        <li>Who is project manager? Mention its role.</li>
+                        <li>Mention some software analysis and design tools.</li>
+                        <li>What is verification and validation?</li>
+                        <li>Define software configuration management.</li>
+                        <li>Differentiate between functional and non-functional requirements.</li>
+                        <li>What is test plan? Why it is necessary?</li>
 
 
                         <h5 class="text-center">Group B</h5>
 
                         <b>
 
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                            <p class="text-center">Attempt any five questions. (5x8=40)</p>
 
                         </b>
 
-                        <li>Define exceptional handling. Explain the exception handling process with example.</li>
-
-                        <li>What is java collection? Write a complete program to illustrate ArrayList class.</li>
-
-                        <li>What are java stream classes? Write a program to input text "Far Western University" from
-                            keyword and write into file.</li>
-
-                        <li>Differentiate between interface and abstract class with java code.</li>
-
-                        <li>Discuss the use of <b>super</b> and <b>final</b> keyword in java with example.</li>
-
-                        <li>What is method overloading? Write a program to illustrate it.</li>
+                        <li>Briefly describe software engineering practice.</li>
+                        <li>What are the key challenges facing in software engineering? Explain.</li>
+                        <li>Why elicition and analysis is a diffcult process in requirement engineering process? Describe.</li>
+                        <li>Explain class diagram and use case diagram with suitable examples.</li>
+                        <li>Explain waterfall model with its merits and demerits.</li>
+                        <li>What is software quality assurance? Describe element of software quality assurance.</li>
 
                         <h5 class="text-center">Group C</h5>
 
                         <b>
 
-                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
+                            <p class="text-center">Attempt any three questions. (3x12=36)</p>
 
                         </b>
 
-                        <li>Define a thread. How do you create a thread in java? Explain the thread life cycle with
-                            diagram.</li>
-
-                        <li>Discuss the importance of package in java. Explain the steps of creating user define package
-                            in java with example.</li>
-
-                        <li>How do you implement multiple inheritance in java? Explain with programming example.</li>
-
-                        <li>Write short notes on (Any two) <br>
-
-                            <ol type="A">
-
-                                <li>Command line arguments</li>
-
-                                <li>Constructors in java</li>
-
-                                <li>Structure of java program </li>
-
-                            </ol>
-
-                        </li>
-
-
+                        <li>Discuss briefly about model driven engineering (MDE). Explain model driven architecture.</li>
+                        <li>Describe the object oriented design principles. Explain activity diagram and sequence diagram with examples.</li>
+                        <li>How the changes are managed in software system? Explain briefly.</li>
+                        <li>Why testing is important in software development? Describe and differentiate black box and white box testing.</li>
 
                     </ol>
 
@@ -209,11 +172,11 @@
 
                     <li><a href="../crypto/2074.html">Introduction to Cryptography</a></li>
 
-                    <li><a href="#">Java Progamming I</a></li>
+                    <li><a href="../java/2074.html">Java Progamming I</a></li>
 
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
 
-                    <li><a href="../se/2074.html">Software Engineering</a></li>
+                    <li><a href="#">Software Engineering</a></li>
 
                     <li><a href="../webII/2074.html" href="">Web Tech II</a></li>
 
@@ -231,12 +194,12 @@
 
 
 
-    <!-- Footer Section -->
 
+
+    <!-- Footer Section -->
     <div class="container-fluid js-footer-container">
         
     </div>
-
 
 
     <!-- BootStrap JavaScript -->
@@ -246,9 +209,6 @@
         crossorigin="anonymous"></script>
     <script src="../../../scipts/header.js"></script>
     <script src="../../../scipts/footer.js"></script>
-
 </body>
-
-
 
 </html>
