--- a/csit/6sem/webII/2079.html
+++ b/csit/6sem/webII/2079.html
@@ -35,6 +35,7 @@
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
                     <a href="#"><button type="button" class="btn paper-year-style">2079</button></a>
+                    <a href="2080.html"><button type="button" class="btn">2080</button></a>
                 </div>
             </div>
 
