--- a/csit/6sem/se/2079.html
+++ b/csit/6sem/se/2079.html
@@ -66,6 +66,7 @@
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
 
                     <a href="#"><button type="button" class="btn  paper-year-style ">2079</button></a>
+                    <a href="2080.html"><button type="button" class="btn">2080</button></a>
 
                 </div>
 
@@ -213,7 +214,7 @@
 
     <!-- Footer Section -->
     <div class="container-fluid js-footer-container">
-
+        
     </div>
 
 
